--- a/app/src/main/res/layout/emotion_list_fragment_layout.xml
+++ b/app/src/main/res/layout/emotion_list_fragment_layout.xml
@@ -19,4 +19,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
