--- a/app/src/main/res/layout/emotion_list_fragment_layout.xml
+++ b/app/src/main/res/layout/emotion_list_fragment_layout.xml
@@ -16,7 +16,7 @@
 
     <ListView
         android:id="@android:id/list"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
