--- a/app/src/main/res/layout/emotion_list_fragment_layout.xml
+++ b/app/src/main/res/layout/emotion_list_fragment_layout.xml
@@ -7,8 +7,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/headerList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top" />
+        android:layout_height="wrap_content" />
 
     <ListView
         android:id="@android:id/list"
