Improved emotion journey layout

--- a/app/src/main/res/layout/emotion_journey_item.xml
+++ b/app/src/main/res/layout/emotion_journey_item.xml
@@ -5,8 +5,5 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
+    android:padding="10dp"
     android:textAppearance="?android:attr/textAppearanceListItemSmall" />
